--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -2,8 +2,8 @@
 @import 'font-awesome';
 @import 'font_awesome5_webfont';
 
-// .par-10{
-// position:absolute;
-// right:15px;
-// top: 15px;
-// }
+.par-10{
+position:absolute;
+right:15px;
+top: 15px;
+}
