--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome#index</h1>
 <p>Hello rails from Inzi and Zlaya</p>
-<%= link_to 'My Blog', controller: 'articles' %>
+<%= link_to 'Our Blog', controller: 'articles' %>
