--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 
 <h1 class='text-center mt-3'>Listing articles</h1>
+<%= link_to fa_icon('user-plus',text: 'Sign Up'),new_user_path,class: 'btn btn-default' %>
 <%= link_to fa_icon('plus-square',text: 'New Article') ,new_article_path,class: 'btn btn-default' %>
   <div>
   <% @articles.each do |article| %>
