--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,7 @@
     <div class="card-body">
     <h3 class="mt-3"><%= article.title%></h3>
     <p class="mb-3"><%= article.text %></p>
+    <small>Created at : <%= article.created_at %></small>
     <div class="text-center">
     <%= link_to fa_icon('eye',text:'Show'), article_path(article),class: 'btn btn-primary' %>
     <% if logged_in? %>
