--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,19 @@
 <h1 class='text-center mt-3'>Listing articles</h1>
-<%= link_to fa_icon('plus-square',text: 'New Article') ,new_article_path,class: 'btn btn-default' %>
+
+<div class="w-100" style="height:30px">
+<% if logged_in? %>
+<%= link_to fa_icon('plus-square',text: 'New Article') ,new_article_path,class: 'btn btn-default my-2' %>
+<% end %>
 <%= render './layouts/buttons' %>
+</div>
   <div>
   <% @articles.each do |article| %>
     <div class="card mt-3">
     <div class="card-body">
     <h3 class="mt-3"><%= article.title%></h3>
+    <p> Created by: <%= article.user %></p> 
     <p class="mb-3"><%= article.text %></p>
-    <small>Created at : <%= article.created_at %></small>
+    <small>Posted at : <%= article.updated_at %></small>
     <div class="text-center">
     <%= link_to fa_icon('eye',text:'Show'), article_path(article),class: 'btn btn-primary' %>
     <% if logged_in? %>
