--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,6 +13,7 @@
       </ul>
     </div>
   <% end %>
+     <%= form.hidden_field :user, value: current_user.name %>
     <%= form.label :title  %>
     <%= form.text_field :title,class: 'form-control' %>
     <%= form.label 'Article' %>
