--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_with(model: [ @article, @article.comments.build], local: true) do |form| %>
   
   <div class="form-group">
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter,class: 'form-control' %>
+    <%= form.hidden_field :commenter, value: current_user.name %>
     <%= form.label :body %><br>
     <%= form.text_area :body,class: 'form-control' %>
    <%= button_tag type: 'submit', class: "btn btn-primary my-2" do %>
