--- a/app/views/layouts/_buttons.html.erb
+++ b/app/views/layouts/_buttons.html.erb
@@ -1,7 +1,11 @@
 <% if logged_in? %>
     <%= link_to fa_icon('sign-out-alt',text: 'Sign Out'),logout_path, method: :delete,class: 'btn btn-default float-right' %>
-     <%= link_to current_user.name.upcase, user_path(current_user.id), class:'float-right my-2' %>
+      <% if only_admin? %>
+        <%= link_to fa_icon('toolbox',text: 'Admin'),users_path,class: 'float-right btn btn-success' %>
+    <% end %>
+     <%= link_to current_user.name.capitalize, user_path(current_user.id), class:'float-right my-2 mr-1' %>
     <% else %>
+   
     <%= link_to fa_icon('sign-in-alt',text: 'Sign In'),login_path,class: 'btn btn-default float-right' %>
      <%= link_to fa_icon('user-plus',text: 'Sign Up'),new_user_path,class: 'btn btn-default float-right' %>
 <% end %>
