--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <div class="my-3">
+<% if only_admin? %>
+<%= link_to fa_icon('toolbox',text: 'Admin'),users_path,class: 'float-right btn btn-success' %>
+<% end %>
 <%= link_to fa_icon('edit',text:'Edit'), edit_user_path(@user),class: 'float-right btn btn-warning' %>
 <%= link_to fa_icon('chevron-left',text:'Back'), articles_path,class:'float-left btn btn-default' %>
 <div class="clearfix">
