--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,7 +13,8 @@
     <h3 class="mt-3"><%= article.title%></h3>
     <p> Created by: <%= article.user %></p> 
     <p class="mb-3"><%= article.text %></p>
-    <small>Posted at : <%= article.updated_at %></small>
+    <small>Posted: <%= time_ago_in_words article.updated_at %> ago.</small>
+    <small class="float-right">Number of comments: <%= article.comments.count %></small>
     <div class="text-center">
     <%= link_to fa_icon('eye',text:'Show'), article_path(article),class: 'btn btn-primary' %>
     <% if correct_user?(article.user) %>
