--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,7 +14,7 @@
 <p> Created by: <%= @article.user %></p> 
  <p> <%= @article.text %>
 </p>
-<small>Posted at:<%= @article.updated_at %></small> 
+<small>Posted: <%= time_ago_in_words @article.updated_at %> ago.</small> 
 </div>
 </div>
 <h4 class="text-center mt-3">Comments</h4>
