--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,9 +22,25 @@
     <%= form.password_field :password,class: 'form-control' %>
     <%= form.label 'Confirm Password' %>
     <%= form.password_field :password_confirmation,class: 'form-control' %>
-   
+    <div class="image-upload mt-2 btn btn-primary">
+   <label for="file-input">
+     <span><i class="fas fa-images"></i> Add Image</span>
+   </label>
+
+   <%= form.file_field :picture, id:"file-input",accept: 'image/jpeg,image/gif,image/png'%>
+</div>
+<br/>
      <%= button_tag type: 'submit', class: "btn btn-primary my-2" do %>
       <i class="fas fa-plus"></i> <%= yield(:button_name) %>
   <% end %>
  </div>
 <% end %>
+
+<script type="text/javascript">
+  $('#micropost_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
