--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,7 @@
               data: { confirm: 'Are you sure?' },class: 'btn btn-danger float-right' %>  
         <h3><%= user.name %></h3>
         <h3><%= user.email %></h3>
+         <%= image_tag user.picture.url,class: 'rounded-circle' if user.picture? %>
         <hr/>
     </div>
 </div>
